# Legend

./: .gitignore  CLAUDE.md  Cargo.toml  Config.toml  TEST_REPORT.md  build_server.bat  test_ws.js
.cargo/: config.toml
Client/: index.html  package-lock.json  package.json  vitest.config.ts
Client/src/: App.tsx  (+1 more)
GodotMirClient/: project.godot
GodotMirServer/: Program.cs
MinimalMirClient/: MinimalMirClient.csproj  Program.cs
Server/: Cargo.toml
Server/data/: drops.json  items.json  monsters.json  npcs.json  skills.json
Server/data/maps/: map_0.json  map_1.json  map_2.json  map_3.json
Server/src/: config.rs  lib.rs  main.rs  test_helpers.rs
Server/src/auth/: mod.rs
Server/src/combat/: damage.rs  mod.rs
Server/src/database/: mod.rs  models.rs  repository.rs
Server/src/equipment/: mod.rs
Server/src/game/: mod.rs
Server/src/item/: drops.rs  inventory.rs  mod.rs
Server/src/map/: loader.rs  mod.rs
Server/src/monster/: ai.rs  mod.rs  spawner.rs
Server/src/network/: handler.rs  mod.rs  server.rs  session.rs  session_manager.rs
Server/src/npc/: mod.rs  shop.rs
Server/src/skill/: effects.rs  mod.rs
Shared/: Cargo.toml
docs/: ARCHITECTURE.md  PRD-rewrite.md  arch-db-login-2026-06-13.md  class-diagram-iter4.mermaid  class-diagram-rust.mermaid  class-diagram-ts.mermaid  class-diagram.mermaid  iter4-arch.md  iter4-prd.md  prd-db-login-2026-06-13.md  sequence-diagram-iter4.mermaid  sequence-diagram.mermaid  sequence-gameplay.mermaid  sequence-heartbeat.mermaid  system_design.md
production/: project-stage-report.md
tests/: gdunit4_runner.gd
(+125 files in other folders)
