[workspace]
resolver = "2"
members = [
    "Shared",
    "Server",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.29"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
binrw = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
bitflags = { version = "2", features = ["serde"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
