[package]
name = "mir2-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mir2-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
binrw.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
mir2-shared = { path = "../Shared" }
argon2.workspace = true
password-hash.workspace = true
rand_core.workspace = true
fastrand = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
